remove scrollbars in windows

--- a/swagger.html
+++ b/swagger.html
@@ -12,7 +12,7 @@
         <li data-ng-class="sdk={true: 'active', false: ''}[currentTab=='sdk-pane']"><a href="javascript:void(0)" data-ng-click="showTab('sdk-pane')"
                                                                                        data-toggle="tab">SDK</a></li>
     </ul>
-    <div class="tab-content">
+    <div class="tab-content" style="overflow:hidden">
         <div data-ng-class="swagger" class="tab-pane active" id="swagger-pane">
             <div id="swagger" class="well" style="display:none">
                 <!-- <a href="https://github.com/dreamfactorysoftware/javascript-sdk" target="_new"><div class="btn btn-success">Download our SDK!</div></a><br/><br/>-->
