--- a/config.html
+++ b/config.html
@@ -72,12 +72,10 @@
 
                         <div>
                             <select data-ng-disabled="!Config.allow_guest_user"
-                                    data-ng-model="Config.guest_role_id">
+                                    data-ng-model="Config.guest_role_id"
+                                    data-ng-options="role.id as role.name for role in Roles.record"
+                                    data-ng-selected="Config.guest_role_id">
                                 <option value="">- - None - -</option>
-                                <option data-ng-selected="Config.guest_role_id == role.id"
-                                        data-ng-repeat="role in Roles.record"
-                                        value="{{role.id}}">{{role.name}}
-                                </option>
                             </select>
                         </div>
                     </div>
@@ -96,44 +94,69 @@
                     <br/>
 
                     <div>
-                        <p>Assign a Default Role for Open Registration Users</p>
+                        <p>Assign default role for open registration users</p>
 
                         <div>
                             <select data-ng-disabled="!Config.allow_open_registration"
-                                    data-ng-model="Config.open_reg_role_id">
+                                    data-ng-model="Config.open_reg_role_id"
+                                    data-ng-options="role.id as role.name for role in Roles.record"
+                                    data-ng-selected="Config.open_reg_role_id">
                                 <option value="">- - None - -</option>
-                                <option data-ng-selected="Config.open_reg_role_id == role.id"
-                                        data-ng-repeat="role in Roles.record"
-                                        value="{{role.id}}">{{role.name}}
-                                </option>
                             </select>
                         </div>
                     </div>
                     <div>
-                        <p>Select An Email Service If You Want To Require Email Confirmation</p>
+                        <p>Select an email service if you want to require email confirmation</p>
 
                         <div>
                             <select data-ng-disabled="!Config.allow_open_registration"
-                                    data-ng-model="Config.open_reg_email_service_id">
+                                    data-ng-model="Config.open_reg_email_service_id"
+                                    data-ng-options="svc.id as svc.name for svc in Service.record | filter: {type:'email'}"
+                                    data-ng-selected="Config.open_reg_email_service_id">
                                 <option value="">- - None - -</option>
-                                <option data-ng-selected="Config.open_reg_email_service_id == svc.id"
-                                        data-ng-repeat="svc in Service.record | filter:{type:'email'}"
-                                        value="{{svc.id}}">{{svc.name}}
-                                </option>
                             </select>
                         </div>
                     </div>
                     <div>
-                        <p>Select An Email Template for Email Confirmation</p>
+                        <p>Select an email template for email confirmation</p>
 
                         <div>
-                            <select data-ng-disabled="!Config.allow_open_registration || Config.open_reg_email_service_id==''"
-                                    data-ng-model="Config.open_reg_email_template_id">
+                            <select data-ng-disabled="!Config.allow_open_registration || !Config.open_reg_email_service_id"
+                                    data-ng-model="Config.open_reg_email_template_id"
+                                    data-ng-options="template.id as template.name for template in emailTemplates.record"
+                                    data-ng-selected="Config.open_reg_email_template_id">
                                 <option value="">- - None - -</option>
-                                <option data-ng-selected="Config.open_reg_email_template_id == template.id"
-                                        data-ng-repeat="template in emailTemplates.record"
-                                        value="{{template.id}}">{{template.name}}
-                                </option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="section">
+                    <h5>Password Reset</h5>
+
+                    <div class="alert alert-info">
+                        <li class="icon-info-sign"></li>
+                        &nbsp;If a security question has not been set, password resets can be handled via email. To enable this feature select an email service and template below. Leave set to --None-- to disable password resets via email.
+                    </div>
+                    <div>
+                        <p>Select an email service for password reset, or --None-- to only use security question/answer</p>
+
+                        <div>
+                            <select data-ng-model="Config.password_email_service_id"
+                                    data-ng-options="svc.id as svc.name for svc in Service.record | filter: {type:'email'}"
+                                    data-ng-selected="Config.password_email_service_id">
+                                <option value="">- - None - -</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div>
+                        <p>Select an email template for password reset</p>
+
+                        <div>
+                            <select data-ng-disabled="!Config.password_email_service_id"
+                                    data-ng-model="Config.password_email_template_id"
+                                    data-ng-options="template.id as template.name for template in emailTemplates.record"
+                                    data-ng-selected="Config.password_email_template_id">
+                                <option value="">- - None - -</option>
                             </select>
                         </div>
                     </div>
