refactoring, ie scrollbars

--- a/swagger.html
+++ b/swagger.html
@@ -16,7 +16,7 @@
         <div data-ng-class="swagger" class="tab-pane active" id="swagger-pane">
             <div id="swagger" class="well" style="display:none">
                 <!-- <a href="https://github.com/dreamfactorysoftware/javascript-sdk" target="_new"><div class="btn btn-success">Download our SDK!</div></a><br/><br/>-->
-                <iframe style="display:none" frameBorder=0 src=""></iframe>
+                <iframe id="swaggerFrame" style="display:none" frameBorder=0 src=""></iframe>
             </div>
         </div>
         <div data-ng-class="sdk" class="tab-pane" id="sdk-pane">
@@ -30,7 +30,7 @@
 
 
             <div id="docs" class="well" style="display:none">
-                <iframe style="display:none" frameBorder=0 src=""></iframe>
+                <iframe id="docsFrame" style="display:none" frameBorder=0 src=""></iframe>
             </div>
         </div>
     </div>
