pnotify, save no longer closes window, changed cancel to close

--- a/filemanager/editor.html
+++ b/filemanager/editor.html
@@ -27,14 +27,13 @@
     </p>
 </div>
 <div style="bottom:10px;position:absolute;width:100%;">
-<div align="center">
-
-<a id="save" class="btn" href="#">
-    <i class="icon-save"></i> Save</a>
-<a id="close" class="btn" href="#">
-    <i class="icon-remove"></i> Cancel</a>
-</div>
+    <div align="center">
+        <a id="save" class="btn" href="#">
+            <i class="icon-save"></i> Save</a>
+        <a id="close" class="btn" href="#">
+            <i class="icon-remove"></i> Close</a>
     </div>
+</div>
 </body>
 
 
@@ -44,6 +43,8 @@
 <script src="/public/web-core/js/utils.js"></script>
 <script src="/public/web-core/js/jquery.js"></script>
 <script src="/public/web-core/js/jquery-ui-1.9.2.custom.min.js"></script>
+<script src="/public/web-core/js/pnotify/pnotify.js"></script>
+<link rel="stylesheet" href="/public/web-core/js/pnotify/pnotify.css" type="text/css" />
 <script src="js/editor.js"></script>
 <script src="js/ace/ace.js"></script>
 <script src="/public/web-core/js/bootstrap.min.js"></script>
